[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/Carnet/Font/Font_Titre_Livre.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/UI/Carnet/Journal/texture_feuille.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/Carnet/Font/Font_SousTitre2_Livre.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 3

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
thickness = 3

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 400
custom_constants/margin_top = 100
custom_constants/margin_left = 400
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="MarginContainer2"]
margin_left = 400.0
margin_top = 100.0
margin_right = 1520.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
margin_left = 400.0
margin_top = 100.0
margin_right = 1520.0
margin_bottom = 980.0
mouse_filter = 2
custom_constants/margin_right = 200
custom_constants/margin_top = 50
custom_constants/margin_left = 200
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer"]
margin_left = 200.0
margin_top = 50.0
margin_right = 920.0
margin_bottom = 830.0
mouse_filter = 2
custom_constants/separation = 70

[node name="Options" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 720.0
margin_bottom = 548.0
size_flags_vertical = 6
custom_constants/separation = 100

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 358.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "RÃ©solution : "
valign = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 362.0
margin_right = 462.0
margin_bottom = 35.0
size_flags_horizontal = 2
text = "1920x1080"
items = [ "1920x1080", null, false, 0, null, "1680x1050", null, false, 1, null, "1280x1024", null, false, 2, null ]
selected = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 720.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 358.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Plein Ecran :"
valign = 1

[node name="PleinEcran" type="CheckBox" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 362.0
margin_right = 720.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_constants/check_vadjust = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 720.0
margin_bottom = 305.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 358.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Volume :"
valign = 1

[node name="HSlider" type="HSlider" parent="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 720.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retour" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer"]
margin_top = 739.0
margin_right = 720.0
margin_bottom = 780.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_constants/hseparation = 150
text = "Fermer"
flat = true
[connection signal="item_selected" from="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/PleinEcran" to="." method="_on_PleinEcran_toggled"]
[connection signal="value_changed" from="MarginContainer2/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/Retour" to="." method="_on_Retour_pressed"]
